Fix rerendering & display bugs on mobile

--- a/src/components/Disclaimer/disclaimer.module.css
+++ b/src/components/Disclaimer/disclaimer.module.css
@@ -7,6 +7,7 @@
   bottom: 0;
   display: flex;
   align-items: center;
+  justify-content: stretch;
   gap: 1rem;
   border-radius: 1rem 1rem 0 0;
   background-color: transparent;
@@ -33,4 +34,10 @@
   font-weight: 900;
   cursor: pointer;
   display: none;
+}
+
+@media screen and (max-width: 786px) {
+  .disclaimer {
+    max-width: 90vw;
+  }
 }
